--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://spotify.luizchaves.dev",
+  "start_url": "https://spotifydesafio.luizchaves.dev",
   "display": "standalone",
   "theme_color": "#191414",
   "background_color": "#1db954"
